--- a/src/vista/IniciarSesion.form
+++ b/src/vista/IniciarSesion.form
@@ -86,7 +86,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Contrase&#xf1;a"/>
+        <Property name="text" type="java.lang.String" value="Contrasena"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="jButton1">
