boton entrar terminado

--- a/bin/vista/PantallaUsuario.form
+++ b/bin/vista/PantallaUsuario.form
@@ -5,6 +5,9 @@
     <Component class="javax.swing.ButtonGroup" name="gestionUsuario">
     </Component>
     <Container class="javax.swing.JDialog" name="ConsultarCartelera">
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+      </AuxValues>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -208,6 +211,9 @@
       </SubComponents>
     </Container>
     <Container class="javax.swing.JDialog" name="AgnadirOpinion">
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+      </AuxValues>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -347,6 +353,9 @@
       </SubComponents>
     </Container>
     <Container class="javax.swing.JDialog" name="ComprarEntrada">
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+      </AuxValues>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -592,6 +601,9 @@
       </SubComponents>
     </Container>
     <Container class="javax.swing.JDialog" name="ConsultarCompras">
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+      </AuxValues>
 
       <Layout>
         <DimensionLayout dim="0">
