--- a/bin/vista/PantallaUsuario.form
+++ b/bin/vista/PantallaUsuario.form
@@ -5,6 +5,11 @@
     <Component class="javax.swing.ButtonGroup" name="gestionUsuario">
     </Component>
     <Container class="javax.swing.JDialog" name="ConsultarCartelera">
+      <Properties>
+        <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[600, 550]"/>
+        </Property>
+      </Properties>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
       </AuxValues>
@@ -211,6 +216,11 @@
       </SubComponents>
     </Container>
     <Container class="javax.swing.JDialog" name="AgnadirOpinion">
+      <Properties>
+        <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[400, 300]"/>
+        </Property>
+      </Properties>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
       </AuxValues>
@@ -376,6 +386,11 @@
       </SubComponents>
     </Container>
     <Container class="javax.swing.JDialog" name="ComprarEntrada">
+      <Properties>
+        <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[500, 400]"/>
+        </Property>
+      </Properties>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
       </AuxValues>
