dejando todo ok vista

--- a/bin/vista/PantallaUsuario.form
+++ b/bin/vista/PantallaUsuario.form
@@ -218,7 +218,7 @@
     <Container class="javax.swing.JDialog" name="AgnadirOpinion">
       <Properties>
         <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-          <Dimension value="[400, 300]"/>
+          <Dimension value="[500, 400]"/>
         </Property>
       </Properties>
       <AuxValues>
@@ -660,6 +660,11 @@
       </SubComponents>
     </Container>
     <Container class="javax.swing.JDialog" name="ConsultarCompras">
+      <Properties>
+        <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[400, 350]"/>
+        </Property>
+      </Properties>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
       </AuxValues>
